--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ div {
     margin-bottom: 20px;
 }
 
+#initial-form {
+    text-align: right;
+}
+
 #initial-table td, #bill-table th, #bill-table td, #summary-table th, #summary-table td {
     padding: 8px;
     /* border: 1px solid #1a1a1a; */
@@ -48,6 +52,13 @@ input[type="text"], input[type="number"] {
     border: 1px solid #ddd;
     border-radius: 4px;
     box-sizing: border-box;
+}
+
+/* For Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 button {
